[tool.poetry]
name = "bud_ecosystem_utils"
version = "0.14.0"
description = ""
authors = ["Rahul V Ramesh <rahulvramesh@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dapr = "^1.11.0"
accelerate = "^0.23.0"
tqdm = "^4.66.0"
smart-open = {extras = ["s3"], version = "^6.4.0"}
ray = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
